Jenkins: extract element 'properties' from Surefire reports